# PQHex

./: .gitignore  CHANGELOG.md  CMakeLists.txt  PQHex.cpp  PQHex.h  README.md  Save.cpp  Save.h  main.cpp  pqhex.ui
.github/workflows/: rolling-release.yml
Arch/: PKGBUILD  pqhex.desktop
Resources/: app_res.qrc
Resources/Windows/: win.rc.in
Resources/linux/appimage/: org.kylon.pqhex.appdata.xml
classes/: Parser.cpp  Parser.h
classes/Patcher/: GoodsPatcher.cpp  GoodsPatcher.h  ItemStoragePatcher.cpp  ItemStoragePatcher.h  PlayerNamePatcher.cpp  PlayerNamePatcher.h  StonePatcher.cpp  StonePatcher.h
classes/Patcher/include/: Patcher.h
include/: Error.h  TypeAliases.h
include/quest/: BattleData.h  CharacterStorage.h  CheckData.h  ConfigData.h  Core.h  FormationData.h  Goods.h  GoodsManageData.h  ItemStorage.h  ManageData.h  MemberData.h  Misc.h  PlacementData.h  PlayerData.h  PokemonMemory.h  PotentialStorage.h  PowerStone.h  PowerStoneBonus.h  SaveCharacterData.h  SaveCharacterPoteintialData.h  SavePotentialSkillData.h  SerializeData.h  StoneData.h
linux/appimage/: org.kylon.pqhex.desktop
res/: resources.qrc
tabs/: LogTab.cpp  LogTab.h  MainTab.cpp  MainTab.h  NatureTab.cpp  NatureTab.h
tabs/include/: FlowLayout.cpp  FlowLayout.h  GridWidget.h  MainSubWidget.h  Utils.cpp  Utils.h
tabs/mainSubTabs/: GoodsTab.cpp  GoodsTab.h  InfoTab.cpp  InfoTab.h  IngridientsTab.cpp  IngridientsTab.h  MiscTab.cpp  MiscTab.h  PartyTab.cpp  PartyTab.h  PlayerTab.cpp  PlayerTab.h  PokedexTab.cpp  PokedexTab.h  PokemonTab.cpp  PokemonTab.h  StoneTab.cpp  StoneTab.h
tabs/widgets/: ConfigDataEditor.cpp  ConfigDataEditor.h  MiscEditor.cpp  MiscEditor.h  PokemonContainer.cpp  PokemonContainer.h  PokemonWidget.cpp  PokemonWidget.h  StoneContainer.cpp  StoneContainer.h  StoneWidget.cpp  StoneWidget.h
tabs/widgets/PokemonEditor/: PokemonEditor.cpp  PokemonEditor.h
tabs/widgets/PokemonEditor/SaveCharacterData/: PokemonBaseDataEditor.cpp  PokemonBaseDataEditor.h
tabs/widgets/PokemonEditor/SaveCharacterData/CharacterPotentialData/: ActiveSlotsEditor.cpp  ActiveSlotsEditor.h  AttachSkillStoneStorageIDEditor.cpp  AttachSkillStoneStorageIDEditor.h  AttachStoneStorageIDEditor.cpp  AttachStoneStorageIDEditor.h  PokemonCharacterPotentialEditor.cpp  PokemonCharacterPotentialEditor.h  PotentialSkillDataEditor.cpp  PotentialSkillDataEditor.h  SlotPropertyTypesEditor.cpp  SlotPropertyTypesEditor.h
tabs/widgets/StoneEditor/: StoneEditor.cpp  StoneEditor.h
tabs/widgets/StoneEditor/StoneData/: StoneBonusEditor.cpp  StoneBonusEditor.h  StoneDataEditor.cpp  StoneDataEditor.h
